# HW_WEB13_Django

./: README.md  pyproject.toml
hw_quotes/: .env  config.py  db.sqlite3  manage.py
hw_quotes/hw_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hw_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_quotes/quotes/migrations/: 0001_initial.py  0002_alter_author_fullname.py  0003_alter_author_born_date_alter_author_born_location.py  0004_alter_tag_name.py  0005_quote_user.py
hw_quotes/quotes/static/quotes/: style.css
hw_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  edit_quote.html  index.html  login.html  tag_quotes.html
hw_quotes/quotes/templatetags/: extract.py
hw_quotes/users/: forms.py  urls.py  views.py
hw_quotes/users/templates/users/: logout.html  password_reset_done.html  password_reset_email.html  signin.html  signup.html
hw_quotes/utils/: add_quotes_to_mongo.py  migration.py  migration_postgres.py
