[tool.poetry]
name = "hw-web10-quotes"
version = "0.1.0"
description = ""
authors = ["Denko <officedenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.6"
bson = "^0.5.10"
pymongo = "4.4.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
