[tool.poetry]
name = "hw-web13-django"
version = "0.1.0"
description = ""
authors = ["Denko <officedenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
bson = "^0.5.10"
pymongo = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
